UC03: Filter & Sort FoodItems with SortBy enum